Added i18n, stations service and spec
