# backend/internal/service/stations/handlers/http.go
@@ -1,0 +1,18 @@
+package handlers
+
+import (
+	"github.com/mihett05/trip-crawler/internal/service/stations/services/cities"
+	"go.uber.org/zap"
+)
+
+type HTTPHandler struct {
+	logger  *zap.Logger
+	service *cities.Service
+}
+
+func NewHTTPHandler(logger *zap.Logger, service *cities.Service) *HTTPHandler {
+	return &HTTPHandler{
+		logger:  logger,
+		service: service,
+	}
+}
